--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -15,6 +15,20 @@
     <dimen name="appbar_padding_top">8dp</dimen>
 
 
+    <!-- Text Size. -->
+
+    <dimen name="xsmall_text">10sp</dimen>
+    <dimen name="small_text">12sp</dimen>
+    <dimen name="medium_text">14sp</dimen>
+    <dimen name="large_text">16sp</dimen>
+    <dimen name="header_text">18sp</dimen>
+    <dimen name="nav_header_text">20sp</dimen>
+
+    <!-- Common sizes. -->
+
+    <dimen name="items_inbetween">8dp</dimen>
+    <dimen name="items_padding">4dp</dimen>
+
     <dimen name="standard_field_width">200dp</dimen>
 
     <dimen name="user_profile_avatar_size">88dp</dimen>
