--- a/app/src/main/res/layout-v26/activity_city_by_coordinates.xml
+++ b/app/src/main/res/layout-v26/activity_city_by_coordinates.xml
@@ -35,14 +35,18 @@
 
     <TextView
         android:id="@+id/tvResultsLon"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="25dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="25dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvResultsLat"
-        android:layout_marginHorizontal="25dp"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvResultsLat" />
+
     <Button
         android:id="@+id/btnSubmit"
         android:layout_width="wrap_content"
