--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -74,11 +74,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="English"
                 android:padding="10dp"
-                />
+                android:text="Admin" />
             <android.support.v7.widget.SwitchCompat
-                android:id="@+id/languageSwitch"
+                android:id="@+id/adminSwitch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
@@ -86,9 +85,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="हिंदी"
                 android:padding="10dp"
-                />
+                android:text="User" />
 
         </LinearLayout>
         <!-- Signup Button -->
