--- a/app/src/main/res/layout/activity_report_location.xml
+++ b/app/src/main/res/layout/activity_report_location.xml
@@ -7,153 +7,6 @@
     android:orientation="vertical"
     >
 
-    <!--<EditText-->
-    <!--android:id="@+id/et_name"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:ems="10"-->
-    <!--android:hint="Your name"-->
-    <!--android:inputType="textPersonName"-->
-    <!--tools:layout_editor_absoluteX="156dp"-->
-    <!--tools:layout_editor_absoluteY="70dp" />-->
-
-    <!--<EditText-->
-    <!--android:id="@+id/et_h_name"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@id/et_state"-->
-    <!--android:ems="10"-->
-    <!--android:hint="Hospital you visited"-->
-    <!--android:inputType="textPersonName"-->
-    <!--tools:layout_editor_absoluteX="140dp"-->
-    <!--tools:layout_editor_absoluteY="188dp" />-->
-
-    <!--<EditText-->
-    <!--android:id="@+id/et_state"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@id/et_pincode"-->
-    <!--android:ems="10"-->
-    <!--android:hint="Enter state"-->
-    <!--android:inputType="textPersonName"-->
-    <!--tools:layout_editor_absoluteX="130dp"-->
-    <!--tools:layout_editor_absoluteY="297dp" />-->
-
-    <!--<EditText-->
-    <!--android:id="@+id/et_disease"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@id/et_gender"-->
-    <!--android:ems="10"-->
-    <!--android:hint="Enter your disease"-->
-    <!--tools:layout_editor_absoluteX="130dp"-->
-    <!--tools:layout_editor_absoluteY="328dp" />-->
-
-    <!--<EditText-->
-    <!--android:id="@+id/et_pincode"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@id/et_disease"-->
-    <!--android:ems="10"-->
-    <!--android:hint="Enter pincode here"-->
-    <!--android:inputType="textPersonName"-->
-    <!--tools:layout_editor_absoluteX="99dp"-->
-    <!--tools:layout_editor_absoluteY="373dp" />-->
-
-    <!--<EditText-->
-    <!--android:id="@+id/et_age"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@id/et_name"-->
-    <!--android:ems="10"-->
-    <!--android:hint="Your Age"-->
-    <!--android:inputType="textPersonName"-->
-    <!--tools:layout_editor_absoluteX="213dp"-->
-    <!--tools:layout_editor_absoluteY="394dp" />-->
-
-    <!--<EditText-->
-    <!--android:id="@+id/et_gender"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/et_age"-->
-    <!--android:ems="10"-->
-    <!--android:hint="Your gender"-->
-    <!--android:inputType="textPersonName"-->
-    <!--tools:layout_editor_absoluteX="99dp"-->
-    <!--tools:layout_editor_absoluteY="611dp" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/textView5"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="HospitalName"-->
-    <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"-->
-    <!--android:textStyle="bold"-->
-    <!--tools:layout_editor_absoluteX="0dp"-->
-    <!--tools:layout_editor_absoluteY="264dp" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/textView6"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="State"-->
-    <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"-->
-    <!--android:textStyle="bold"-->
-    <!--tools:layout_editor_absoluteX="114dp"-->
-    <!--tools:layout_editor_absoluteY="52dp" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/textView4"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="37dp"-->
-    <!--android:text="Pincode"-->
-    <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"-->
-    <!--android:textStyle="bold"-->
-    <!--tools:layout_editor_absoluteX="277dp"-->
-    <!--tools:layout_editor_absoluteY="39dp" />-->
-
-    <!--<TextView-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_below="@+id/et_gender"-->
-    <!--android:text="Disease"-->
-    <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"-->
-    <!--android:textStyle="bold"-->
-    <!--tools:layout_editor_absoluteX="16dp"-->
-    <!--tools:layout_editor_absoluteY="233dp" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/textView"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="Name"-->
-
-    <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"-->
-    <!--android:textStyle="bold"-->
-    <!--tools:layout_editor_absoluteX="42dp"-->
-    <!--tools:layout_editor_absoluteY="40dp" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/textView2"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="Age"-->
-
-    <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"-->
-    <!--android:textStyle="bold"-->
-    <!--tools:layout_editor_absoluteX="140dp"-->
-    <!--tools:layout_editor_absoluteY="16dp" />-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/textView3"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:text="Gender"-->
-    <!--android:textStyle="bold"-->
-    <!--tools:layout_editor_absoluteX="33dp"-->
-    <!--tools:layout_editor_absoluteY="115dp" />-->
-
-
     <LinearLayout
         android:paddingVertical="15dp"
         android:layout_width="match_parent"
@@ -180,58 +33,6 @@
             />
     </LinearLayout>
 
-    <LinearLayout
-        android:paddingVertical="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="20dp"
-        >
-
-        <TextView
-            android:id="@+id/tv_state"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:paddingTop="8dp"
-            android:layout_gravity="center"
-            android:text="State"
-            />
-        <EditText
-            android:id="@+id/et_state"
-            android:layout_width="0dp"
-            android:layout_gravity="center"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:hint="State"
-            />
-    </LinearLayout>
-
-    <LinearLayout
-
-        android:paddingVertical="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="20dp"
-        >
-
-        <TextView
-            android:id="@+id/tv_disease"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:paddingTop="8dp"
-            android:layout_gravity="center"
-            android:text="Disease"
-            />
-        <EditText
-            android:id="@+id/et_disease"
-            android:layout_width="0dp"
-            android:layout_gravity="center"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:hint="Disease"
-            />
-    </LinearLayout>
 
     <LinearLayout
         android:paddingVertical="15dp"
@@ -241,49 +42,24 @@
         >
 
         <TextView
-            android:id="@+id/tv_pincode"
+            android:id="@+id/tv_uid"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="5"
             android:paddingTop="8dp"
             android:layout_gravity="center"
-            android:text="Pincode"
+            android:text="User ID"
             />
         <EditText
-            android:id="@+id/et_pincode"
+            android:id="@+id/et_uid"
             android:layout_width="0dp"
             android:layout_gravity="center"
             android:layout_height="match_parent"
             android:layout_weight="5"
-            android:hint="Pincode"
+            android:hint="User ID"
             />
     </LinearLayout>
 
-    <LinearLayout
-        android:paddingVertical="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingHorizontal="20dp"
-        >
-
-        <TextView
-            android:id="@+id/tv_h_name"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:paddingTop="8dp"
-            android:layout_gravity="center"
-            android:text="Hospital Name"
-            />
-        <EditText
-            android:id="@+id/et_h_name"
-            android:layout_width="0dp"
-            android:layout_gravity="center"
-            android:layout_height="match_parent"
-            android:layout_weight="5"
-            android:hint="Hospital Name"
-            />
-    </LinearLayout>
     <LinearLayout
         android:paddingVertical="15dp"
         android:layout_width="match_parent"
@@ -335,6 +111,87 @@
             android:hint="Gender"
             />
     </LinearLayout>
+
+    <LinearLayout
+        android:paddingVertical="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="20dp"
+        >
+
+        <TextView
+            android:id="@+id/tv_state"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:paddingTop="8dp"
+            android:layout_gravity="center"
+            android:text="State"
+            />
+        <EditText
+            android:id="@+id/et_state"
+            android:layout_width="0dp"
+            android:layout_gravity="center"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:hint="State"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+
+        android:paddingVertical="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="20dp"
+        >
+
+        <TextView
+            android:id="@+id/tv_city_name"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:paddingTop="8dp"
+            android:layout_gravity="center"
+            android:text="City"
+            />
+        <EditText
+            android:id="@+id/et_city_name"
+            android:layout_width="0dp"
+            android:layout_gravity="center"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:hint="City name"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:paddingVertical="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="20dp"
+        >
+
+        <TextView
+            android:id="@+id/tv_pincode"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:paddingTop="8dp"
+            android:layout_gravity="center"
+            android:text="Pincode"
+            />
+        <EditText
+            android:id="@+id/et_pincode"
+            android:layout_width="0dp"
+            android:layout_gravity="center"
+            android:layout_height="match_parent"
+            android:layout_weight="5"
+            android:hint="Pincode"
+            />
+    </LinearLayout>
+
+
 
     <Button
         android:id="@+id/bt_submit"
