--- a/app/src/main/res/layout/activity_login_info_item.xml
+++ b/app/src/main/res/layout/activity_login_info_item.xml
@@ -2,28 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ArrivalReportsActivity"
     android:paddingTop="0dp"
     android:orientation="vertical"
-    android:background="@android:color/holo_red_light"
+    android:paddingVertical="15dp"
     >
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_begin="196dp" />
-
-    </android.support.constraint.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,12 +34,5 @@
             />
 
     </LinearLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:paddingTop="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/rvLogin"
-        />
 
 </LinearLayout>
