--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -15,6 +15,8 @@
     <dimen name="appbar_padding_top">8dp</dimen>
 
 
+    <dimen name="margin_1">8dp</dimen>
+    <dimen name="margin_2">16dp</dimen>
     <!-- Text Size. -->
 
     <dimen name="xsmall_text">10sp</dimen>
