--- a/app/src/main/res/layout/activity_login_info.xml
+++ b/app/src/main/res/layout/activity_login_info.xml
@@ -49,6 +49,16 @@
             android:background="@drawable/back"
             />
 
+        <TextView
+            android:id="@+id/tvLocation"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:text="Location"
+            android:textSize="15sp"
+            android:background="@drawable/back"
+            />
+
     </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
