--- a/app/src/main/res/layout/activity_login_info_item.xml
+++ b/app/src/main/res/layout/activity_login_info_item.xml
@@ -33,6 +33,16 @@
             android:background="@drawable/back"
             />
 
+        <TextView
+            android:id="@+id/tvLocation"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:text="Location"
+            android:textSize="15sp"
+            android:background="@drawable/back"
+            />
+
     </LinearLayout>
 
 </LinearLayout>
